Add logo support

--- a/snappass/static/snappass/css/custom.css
+++ b/snappass/static/snappass/css/custom.css
@@ -15,3 +15,7 @@ input[readonly].readonly-text {
     background-color: #fff;
     cursor: text;
 }
+
+.navbar-default {
+    background: transparent!important;
+}
